--- a/app/src/main/res/layout/fragment_settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_settings_fragment.xml
@@ -44,7 +44,9 @@
             >
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image"
+                android:id="@+id/profile_image1"
+                android:scaleType="centerCrop"
+                android:transitionName="sharedPIC"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:src="@drawable/profile"
@@ -76,9 +78,9 @@
                 android:layout_marginTop="10dp"
                 android:text="Arupam Kumar Saha"
                 android:textColor="#000000"
-                android:textSize="16dp"
+                android:textSize="18dp"
                 android:fontFamily="@font/helveticaneu_bold"
-                app:layout_constraintTop_toBottomOf="@+id/profile_image"
+                app:layout_constraintTop_toBottomOf="@+id/profile_image1"
                 app:layout_constraintStart_toStartOf="parent"
 
                 />
@@ -111,13 +113,13 @@
         android:text="    Send Feedback"
         android:textColor="#000000"
         android:padding="15dp"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:textAlignment="textStart"
         android:foreground="?android:attr/selectableItemBackground"
         android:background="@drawable/buttonbgsettings"
-        android:fontFamily="@font/robotoregular"
+        android:fontFamily="@font/helveticaneue_medium"
         android:textAllCaps="false"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="22dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@+id/profileCard"
@@ -133,14 +135,14 @@
         android:text="    Bug Report"
         android:drawableLeft="@drawable/bugreport"
         android:textColor="#000000"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:paddingLeft="15dp"
         android:textAlignment="viewStart"
         android:background="@drawable/buttonbgsettings"
         android:foreground="?android:attr/selectableItemBackground"
-        android:fontFamily="@font/robotoregular"
+        android:fontFamily="@font/helveticaneue_medium"
         android:textAllCaps="false"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="7dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,14 +157,14 @@
         android:drawableLeft="@drawable/aboutus"
         android:text="    About Us"
         android:textColor="#000000"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:paddingLeft="15dp"
         android:textAlignment="viewStart"
         android:background="@drawable/buttonbgsettings"
         android:foreground="?android:attr/selectableItemBackground"
-        android:fontFamily="@font/robotoregular"
+        android:fontFamily="@font/helveticaneue_medium"
         android:textAllCaps="false"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="7dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@+id/bugReportBtn"
@@ -177,14 +179,14 @@
         android:layout_height="wrap_content"
         android:text="    Refer a friend"
         android:textColor="#000000"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:paddingLeft="15dp"
         android:textAlignment="viewStart"
         android:background="@drawable/buttonbgsettings"
         android:foreground="?android:attr/selectableItemBackground"
-        android:fontFamily="@font/robotoregular"
+        android:fontFamily="@font/helveticaneue_medium"
         android:textAllCaps="false"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="7dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintTop_toBottomOf="@+id/aboutUsBtn"
