--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -1,65 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="290dp"
     android:layout_height="160dp"
-    android:background="@drawable/quiznext"
+    app:cardCornerRadius="5dp"
     android:layout_gravity="center">
 
-    <TextView
-        android:id="@+id/logoutDialogText"
-        android:layout_width="246dp"
-        android:layout_height="60dp"
-        android:fontFamily="@font/helveticaneue_medium"
-        android:text="Are you sure you want to logout?"
-        android:textColor="#000"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.158" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/quiznext"
+        android:layout_gravity="center"
+        >
 
+        <TextView
+            android:id="@+id/logoutDialogText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/helveticaneue_medium"
+            android:padding="20dp"
+            android:text="Are you sure you want to logout?"
+            android:textColor="#000"
+            android:textSize="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/cancel_logout_button"
-        android:layout_width="143dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="152dp"
-        android:layout_marginBottom="2dp"
-        android:background="#fff"
-        android:fontFamily="@font/robotomedium"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:text="Cancel"
-        android:textColor="#000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoutDialogText"
-        app:layout_constraintVertical_bias="1.0" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
+            >
 
-    <Button
-        android:id="@+id/submit_logout_button"
-        android:layout_width="143dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="2dp"
-        android:background="#fff"
-        android:fontFamily="@font/robotomedium"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:text="Logout"
-        android:textColor="#ff0000"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cancel_logout_button"
-        app:layout_constraintTop_toBottomOf="@+id/logoutDialogText"
-        app:layout_constraintVertical_bias="1.0" />
+            <Button
+                android:id="@+id/cancel_logout_button"
+                android:layout_width="0dp"
+                android:layout_height="63dp"
+                android:layout_weight="1" android:layout_marginLeft="2dp" android:layout_marginBottom="2dp"
+                android:background="@drawable/cancelbrnnext"
+                android:fontFamily="@font/robotomedium"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:text="Cancel"
+                android:textColor="#000"
+                />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/submit_logout_button"
+                android:layout_width="0dp"
+                android:layout_height="63dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginBottom="2dp"
+                android:layout_weight="1"
+                android:background="@drawable/logoutbrndiag"
+                android:fontFamily="@font/robotomedium"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:text="Logout"
+                android:textColor="#ff0000"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
