--- a/app/src/main/res/layout/fragment_quiz_instruction.xml
+++ b/app/src/main/res/layout/fragment_quiz_instruction.xml
@@ -60,20 +60,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/techtesthead"
             />
+
         <TextView
             android:id="@+id/instructionTimeTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:fontFamily="@font/helveticaneue"
-            android:textSize="16dp"
-            android:textColor="#000000"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/helveticaneue_regular"
             android:text="It is a long established fact that a reader will be distracted by "
+            android:textColor="#000000"
+            android:textSize="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chooseTextView"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/chooseTextView" />
 
         <LinearLayout
             android:id="@+id/timetxt"
@@ -89,15 +88,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/instructionTimeTextView"
             >
-        <TextView
-            android:id="@+id/fromInstTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Duration : "
-            android:textSize="16dp"
-            android:fontFamily="@font/helveticaneue"
-            android:textColor="#000000"
-            />
+
+            <TextView
+                android:id="@+id/fromInstTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/helveticaneue_regular"
+                android:text="Duration : "
+                android:textColor="#000000"
+                android:textSize="16dp" />
 
         <TextView
             android:id="@+id/fromInstTime"
@@ -147,13 +146,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/helveticaneue"
-                android:textSize="16dp"
-                android:textColor="#000000"
-                android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/helveticaneue_regular"
                 android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod"
-                />
+                android:textColor="#000000"
+                android:textSize="16dp" />
 
         </LinearLayout>
 
@@ -177,13 +175,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/helveticaneue"
-                android:textSize="16dp"
-                android:textColor="#000000"
-                android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/helveticaneue_regular"
                 android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod"
-                />
+                android:textColor="#000000"
+                android:textSize="16dp" />
 
         </LinearLayout>
 
@@ -207,13 +204,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/helveticaneue"
-                android:textSize="16dp"
-                android:textColor="#000000"
-                android:layout_marginLeft="10dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/helveticaneue_regular"
                 android:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod"
-                />
+                android:textColor="#000000"
+                android:textSize="16dp" />
 
         </LinearLayout>
 
